--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,16 @@
     <title>Home work</title>
 
     <body>
-      <div class="button"></div>
+      <header><h1>This is an image search application</h1></header>
+      <div class="search container">
+        <form class="search-form" id="search-form">
+          <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+          <button class="button">Find</button>
+        </form>
+      </div>
+      
+      
+      <button class="load-more-btn">Load more</button>
     </body>
   </body>
 </html>
