--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
     <body>
       <header><h1>This is an image search application</h1></header>
-      <div class="search container">
+      <div class="search container js-search-container">
         <form class="search-form" id="search-form">
           <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
           <button class="button">Find</button>
