--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
       <header><h1>This is an image search application</h1></header>
       <div class="search container js-search-container">
         <form class="search-form" id="search-form">
-          <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
+          <input class="search-form__input" type="text" name="query" autocomplete="off" placeholder="Search images..." />
           <button class="button">Find</button>
         </form>
       </div>
       
       
-      <button class="load-more-btn">Load more</button>
+      <button class="button  load-more-btn">Load more</button>
     </body>
   </body>
 </html>
