--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       </div>
       
       
-      <button class="button  load-more-btn">Load more</button>
+      <button class="button  load-more-btn " data-action="load-more">Load more</button>
     </body>
   </body>
 </html>
