--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Home work</title>
 
     <body>
@@ -18,7 +19,14 @@
         
       </ul>
       
-      <button class="button  load-more-btn " data-action="load-more">Load more</button>
+      <button class="button  load-more-btn " data-action="load-more">
+        <span
+        class="spinner-border spinner-border-sm spinner is-hidden"
+        role="status"
+        aria-hidden="true"></span>
+
+      <span class="label">Load more</span>
+      </button>
     </body>
   </body>
 </html>
